# pegasus-mini-noetic-dev

./: README.md
apriltag_ros/config/: settings.yaml  tags.yaml
apriltag_ros/launch/: continuous_detection.launch
docs/source/: conf.py  index.rst  install-apriltags.rst  micro-ros-docs.rst  (+3 more)
pegasus_base/: CMakeLists.txt  package.xml
pegasus_base/arduino_src/IMU code/Pegasus_Madgwick_IMU/: Pegasus_Madgwick_IMU.ino
pegasus_base/arduino_src/LED code/LEDs/: LEDs.ino
pegasus_base/config/: battery_config.yaml  docking_config.yaml  imu_config.yaml  led_config.yaml  pi_cam_config.yaml  roboclaw_config.yaml
pegasus_base/configuration_files/: assets_writer_ros_map.lua  pegasus_lidar_2d.lua
pegasus_base/launch/: create_ros_map.launch  pegasus_apriltag.launch  pegasus_base.launch  pegasus_base_imu.launch  pegasus_base_mapping.launch  pegasus_gmapping.launch
pegasus_base/meshes/: leftwheel_link.dae  lidar.dae  rightwheel_link.dae
pegasus_base/scripts/: battery_config_gen.py  camera_publisher.py  deploy_bot.py  docking_v4.py  gpio_in_test.py  imu_node.py  led_node.py  pegasus_base.py  pi_camfeed.py  pi_camfeed_xavier.py  power_monitoring.py  rc_node.py  ros1-picam.sh  ros1_network.sh  ros2-bridge.sh  safe_feature_node.py  stocktake_script.py  test2.py
pegasus_base/scripts/current_sensors_scripts/: DFRobot_INA219.py
pegasus_base/scripts/docking_scripts/: docking_v1.py  docking_v2_odom.py  docking_v3_odom.py  docking_v4.py
pegasus_base/urdf/: pegasus_mini copy.urdf  pegasus_mini.csv  pegasus_mini.urdf  pegasus_mini_backup.urdf  pegasus_mini_dae_old.urdf
